# eventbus-tiny-rust

./: Cargo.toml  README.md
src/: bus.rs  lib.rs  macros.rs  sub.rs
tests/: filtermap.rs  pubsub.rs
